<!-- list_item_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/lighest_blue">

    <!-- Image du cinema -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_kcine"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/cinema_image" />

    <!-- Nom et adresse du cinema -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <!-- Nom du cinema -->
        <TextView
            android:id="@+id/cinema_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cinema_name"
            android:textColor="@color/white"
            android:fontFamily="@font/kanit_bold" />

        <!-- Adresse du cinema -->
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cinema_address"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/kanit_regular" />

    </LinearLayout>

    <!-- Distance du cinema -->
    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinema_distance"
        android:gravity="end"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/kanit_italic" />

</LinearLayout>
